--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 
                 try {
                     // Replace with your actual Formspree endpoint
-                    const response = await fetch('https://formspree.io/f/xpzgkwqr', {
+                    const response = await fetch('https://formspree.io/f/xwpbaaqo', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
