--- a/index.html
+++ b/index.html
@@ -440,14 +440,14 @@
                 <div class="mb-6">
                     <p class="text-gray-400 mb-2">
                         <span class="font-semibold">Email:</span> 
-                        <a href="mailto:contact@forgride.com" class="text-blue-400 hover:text-blue-300">contact@forgride.com</a>
+                        <a href="mailto:forgride@gmail.com" class="text-blue-400 hover:text-blue-300">forgride@gmail.com</a>
                     </p>
                     <p class="text-gray-400 mb-2">
                         <span class="font-semibold">Phone:</span> 
-                        <a href="tel:+91XXXXXXXXXX" class="text-blue-400 hover:text-blue-300">+91-XXXX-XXXX-XX</a>
+                        <a href="tel:+918919233671" class="text-blue-400 hover:text-blue-300">+91-8919233671</a>
                     </p>
                     <p class="text-gray-400">
-                        <span class="font-semibold">Address:</span> Visakhapatnam, Andhra Pradesh, India
+                        <span class="font-semibold">Address:</span> Hyderabad ,Telangana, India
                     </p>
                 </div>
                 
