--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <!-- Primary SEO Tags -->
     <title>ForGride - AI-Powered Hiring Platform | Revolutionary Recruitment Beyond Resumes</title>
-    <meta name="description" content="Transform hiring with ForGride's AI agents that conduct natural conversations to understand true potential. Move beyond resumes with intelligent matching for job seekers and recruiters. Join early access.">
+    <meta name="description" content="Transform hiring with ForGride's AI agents that conduct natural conversations to understand true potential. Move beyond resumes with intelligent matching for job seekers and recruiters.">
     <meta name="keywords" content="AI agents, hiring platform, recruitment software, job matching, conversational AI, true potential assessment, cultural fit, intelligent matching, natural conversations, early access, job seekers, recruiters">
     <meta name="author" content="ForGride">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
